# MSTGI

./: .gitignore  README.md
Datasets/: update_curve_k10_l60_ratio0.005.csv  update_curve_k10_l60_ratio0.01.csv  update_summary_k10_l60_ratio0.005.txt  update_summary_k10_l60_ratio0.01.txt
GTI/: CMakeLists.txt
GTI/extern_libraries/hnsw_SHG/hnswlib/: basis.h  heds.h
GTI/extern_libraries/hnsw_Wolverine/: hnsw_Wolverine.h  hnswalg.h
GTI/extern_libraries/n2/include/n2/: distance.h  hnsw.h  hnsw_build.h  hnsw_search.h  hnsw_search_impl.h
GTI/extern_libraries/n2/src/: Makefile  hnsw.cc  hnsw_build.cc  hnsw_search.cc
GTI/include/: distance.h  gti.h  gti_entry.h  lsh_index.h  objects.h  process.h
GTI/src/: CMakeLists.txt  gti.cpp  lsh_index.cpp  main.cpp  objects.cpp  process.cpp
docs/: S2_SIFT_COMPARISON.md  SHG_IMPROVEMENT.md  SHG_IMPROVEMENT_FROM_SHG_INDEX.md  SHG_OPTIMIZATION_IMPLEMENTATION.md  SHG_OPTIMIZATION_PLAN.md  SHG_PLAN_PROGRESS_ANALYSIS.md  SHG_PLAN_VALIDATION_RESULTS.md  SHG_prune0.md  WOLVERINE_EXPERIMENTS_ANALYSIS.md  WOLVERINE_FOLDERS_ANALYSIS.md  WOLVERINE_INTEGRATION.md
results/: comparison_lazy_leveloff2_gist_deep.csv  实验图表.html  实验结果整理汇总.md
results/ablation/: ablation_deep_compare.md  ablation_gist_compare.md  ablation_sift_compare.md
results/ablation/deep/: ablation_compare.csv
results/ablation/gist/: ablation_compare.csv
results/ablation/sift/: ablation_compare.csv
results/deep/aknn_compare/: aknn_compare_comp_off.csv  aknn_compare_comp_on.csv
results/deep/update/: comparison_all_strategies.csv  update_curve_k10_l60_ratio0.005.csv  update_curve_k10_l60_ratio0.01.csv  update_summary_k10_l60_ratio0.005.txt  update_summary_k10_l60_ratio0.01.txt
results/split_compare/: compare_split_strategies_all.csv
scripts/: README.md
scripts/analysis/: aggregate_mst_results.sh  analyze_shg_plan_results.sh  plot_results.py
scripts/data/: download_gist.sh  run_gist_experiment.sh
scripts/debug/: test_lsh_debug.sh
scripts/misc/: experiment_aknn.sh  reorganize_lsh_experiment.sh
scripts/run/: run_ablation.sh  run_ablation_mst_shg_s2plus.sh  run_ablation_sift.sh  run_ablation_sift_gist.sh  run_aknn_compression_compare.sh  run_baseline_update.sh  run_compare_all_delete_strategies.sh  run_compare_delete_strategies.sh  run_compare_split_strategies.sh  run_deep_gist_update.sh  run_deep_lsh_experiment.sh  run_deep_update.sh  run_deep_wolverine_tree_aug.sh  run_gist_aknn_mem.sh  run_gist_k_sweep.sh  run_gist_local.sh  run_gist_update.sh  run_gti_ops_sift.sh  run_lsh_experiment.sh  run_lsh_param_sweep.sh  run_mst_additional_experiments.sh  run_mst_param_tuning.sh  run_recall_sweep.sh  run_s2_plus_deep_gist.sh  run_s2_plus_sift_test.sh  run_s2_sift_compare_both.sh  run_s2_sift_test.sh  run_shg_aknn_compare.sh  run_shg_aknn_strategies.sh  run_shg_deep_gist.sh  run_shg_def_verification.sh  run_shg_optimization.sh  run_shg_param_tuning.sh  run_shg_plan_validation.sh  run_shg_prune0_gist.sh  run_shg_prune0_optimized.sh  run_shg_sift.sh  run_update.sh
(+800 files in other folders)
