if(GTI_USE_WOLVERINE OR GTI_USE_SHG)
    set(CMAKE_CXX_STANDARD 17)
else()
    set(CMAKE_CXX_STANDARD 11)
endif()

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

file(GLOB SRC_LIST *.cpp *.c)
if(GTI_USE_WOLVERINE)
  add_executable(${PROJECT_NAME} ${SRC_LIST})
  target_link_libraries(${PROJECT_NAME} n2 pthread stdc++)
elseif(GTI_USE_SHG)
  set(GTI_SHG_EXE_NAME "GTI_shg" CACHE STRING "Executable name when building SHG backend")
  add_executable(${GTI_SHG_EXE_NAME} ${SRC_LIST})
  target_link_libraries(${GTI_SHG_EXE_NAME} n2 pthread stdc++)
else()
  add_executable(${GTI_N2_EXE_NAME} ${SRC_LIST})
  target_link_libraries(${GTI_N2_EXE_NAME} n2 pthread stdc++)
endif()

add_definitions(-std=c++11 -O3 -lboost -ltcmalloc_minimal -march=native -Wall -DINFO)
